--- a/thesis/source-rad/zavrsni.tex
+++ b/thesis/source-rad/zavrsni.tex
@@ -269,13 +269,13 @@ Perspektivna transformacija ključan je postupak u pretprocesiranju slike prije 
 \label{chap:methods}
 \hspace*{0.5cm}Tijekom početnog istraživanja problema, u obzir su se uzele tri metode za prepoznavanje jačine i oznake boje karte:
 \begin{enumerate}
-\item Optičko prepoznavanje znakova (engl. \textit{Optical character recognition, OCR}) u kombinaciji sa detektorom objekata
+\item Optičko prepoznavanje znakova (engl. \textit{Optical character recognition, OCR}) u kombinaciji sa detektorom za oznake boje
 \item Neuronska mreža
 \item Tehnike obrade slike
 \end{enumerate}
 
-\section{OCR i Haarov klasifikator}
-\hspace*{0.5cm}Budući da je prepoznavanje znakova uspješno rješeno i dobro dokumentirano, ovo je bio prilično logičan prvi korak ka ostvarenju sustava za prepoznavanje igraćih karata. Budući da se sva informacija potrebna za prepoznavanje jačine karte nalazi u kutovima, OCR bi lagano pronašao koja je jačina karte, ukoliko se dobro izoliraju kutovi. OCR ne može razriješiti znakove koji predstavljaju oznaku boje (herc, tref, pik, karo) karte, pa je trebalo naći drugi način kako je odrediti. Za to bi bio pogodan detektor objekata, odnosno četiri detektora kojima bi prepoznavali o kojoj oznaci boje se radi. Sam proces treniranja detektora ne bi bio problem, ali ideja nije realizirana zbog vjerojatnosti velikog broja lažnih pozitiva (engl. \textit{false positives}). Naime, često bi mogao zamijeniti same oznake boje (npr. herc i pik), ali također bi mogao za nešto što uopće nije oznaka boje reći da je pronašao traženu oznaku. 
+\section{OCR i detektor oznaka boje}
+\hspace*{0.5cm}Budući da je prepoznavanje znakova uspješno rješeno i dobro dokumentirano, ovo je bio prilično logičan prvi korak ka ostvarenju sustava za prepoznavanje igraćih karata. Budući da se sva informacija potrebna za prepoznavanje jačine karte nalazi u kutovima, OCR bi lagano pronašao koja je jačina karte, ukoliko se dobro izoliraju kutovi. OCR ne može razriješiti znakove koji predstavljaju oznaku boje (herc, tref, pik, karo) karte, pa je trebalo naći drugi način kako je odrediti. Za to bi bio pogodan detektor objekata, odnosno četiri detektora kojima bi prepoznavali o kojoj oznaci boje se radi. Sam proces treniranja detektora ne bi bio problem, ali ideja nije realizirana zbog mogućeg velikog broja lažnih pozitiva (engl. \textit{false positives}). Naime, često bi mogao zamijeniti same oznake boje (npr. herc i pik), ali također bi mogao za nešto što uopće nije oznaka boje reći da je pronašao traženu oznaku. 
 
 \section{Neuronska mreža}
 \hspace*{0.5cm}Druga ideja je bilo učenje neuronskim mrežama. Na ulaz neuronske mreže bi se stavila karta, a izlaz bi bio vektor koji bi pokazivao koji smo tip karte dobili. Budući da se raspolaže ograničenim skupom na ulazu i izlazu, neuronska mreža bi davala jako dobre rezultate. Dovoljna bi bila neuronska mreža koja bi raspoznavala je li karta brojčana ($2 - 10$) ili je označena slovom ($A, J, Q, K$). Na ulaz bi se stavile $52$ karte u raznim uvjetima, a izlaz bi bio dvodimenzionalni vektor koji bi rekao je li karta brojčana ili je označena slovom. Nakon toga bi se išlo u daljnje procesiranje, odnosno gledali bi je li karta crna ili crvena te nakon toga uzeti najvjerojatniju opciju između četiri oznake boje. Nakon što je naučena, neuronska mreža bi lako prepoznala kartu koja bi joj došla na ulaz. Glavni nedostatak neuronske mreže je taj što bi trebalo prikupiti mnoštvo primjeraka za učenje.\\
